reverted both package files

--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,8 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.5",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   },
   "scripts": {
     "dev": "npx nodemon --exec npx ts-node ./src/server.ts"
